--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,24 @@
-/*  */
+*::after,
+*::before,
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+::-webkit-scrollbar{
+    display: none;
+}
+    
+
+.navbar{
+    & img[alt='logo'] {
+        width: 5rem;
+    } 
+}
+
+img{
+    aspect-ratio: 1;
+    object-fit: cover;
+    object-position: center;
+}
